finished first beta: gmail window will be called via our own javascript; still need to update the README and maybe put a LICENCE file in here as well

--- a/src/main/resources/README
+++ b/src/main/resources/README
@@ -34,6 +34,7 @@ Other technologies used:
     - Google Client Library for Java (see pom.xml for details)
     - Apache libraries such as commons-io (see pom.xml for details)
     - jQuery 1.7
+    - json2.js
 
 TODOs/ideas:
 ------
